--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,12 +2,12 @@
   text-align: center;
 }
 
-.App-header {
+/* .App-header {
   background-color: #033076;
   min-height: 70px;
   padding: 20px;
   color: white;
-}
+} */
 
 .App-title {
   font-size: 1.5em;
