implements material UI style on all forms.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -26,4 +26,10 @@ button{
 
 width:75px;
 }
+.material-icons.blue600 { 
+  color: rgb(10, 10, 240); 
+}
+.material-icons.md-36 { 
+  font-size: 36px; 
+}
 
